<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff" >

    <android.support.v4.view.ViewPager
        android:id="@+id/contentViewPager"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tabBar"
        android:layout_alignParentTop="true" >
    </android.support.v4.view.ViewPager>

    <LinearLayout
        android:id="@+id/tabBar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:background="@drawable/tabbar_bg"
        android:baselineAligned="false" >

        <RelativeLayout
            android:id="@+id/tabPlaylist"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:clickable="true" >

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:clickable="false"
                android:src="@drawable/tabbar_playlist" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:clickable="false"
                android:paddingBottom="3dp"
                android:text="@string/tabbar_playlist"
                android:textColor="#878787"
                android:textSize="11sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/tabArtist"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:clickable="true" >

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:clickable="false"
                android:src="@drawable/tabbar_artist" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:clickable="false"
                android:paddingBottom="3dp"
                android:text="@string/tabbar_artist"
                android:textColor="#878787"
                android:textSize="11sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/tabAlbum"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:clickable="true" >

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:clickable="false"
                android:src="@drawable/tabbar_album" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:clickable="false"
                android:paddingBottom="3dp"
                android:text="@string/tabbar_album"
                android:textColor="#878787"
                android:textSize="11sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/tabSong"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:clickable="true" >

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:clickable="false"
                android:src="@drawable/tabbar_song" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:clickable="false"
                android:paddingBottom="3dp"
                android:text="@string/tabbar_song"
                android:textColor="#878787"
                android:textSize="11sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/tabSelect"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/tabbar_bg_with_arrow"
            android:clickable="true" >

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:clickable="false"
                android:src="@drawable/tabbar_folder" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:clickable="false"
                android:paddingBottom="3dp"
                android:text="@string/tabbar_folder"
                android:textColor="#878787"
                android:textSize="11sp" />
        </RelativeLayout>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/tabMore"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="60dp"
        android:visibility="invisible" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:gravity="right"
            android:orientation="horizontal"
            android:weightSum="5" >

            <LinearLayout
                android:layout_width="0dip"
                android:layout_height="180dp"
                android:layout_weight="1"
                android:orientation="vertical" >

                <RelativeLayout
                    android:id="@+id/option1"
                    android:layout_width="match_parent"
                    android:layout_height="0dip"
                    android:layout_weight="1"
                    android:background="@drawable/tabbar_bg_down4"
                    android:clickable="true" >

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:clickable="false"
                        android:src="@drawable/tabbar_cloudmusic" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_centerHorizontal="true"
                        android:clickable="false"
                        android:paddingBottom="3dp"
                        android:text="@string/tabbar_cloudmusic"
                        android:textColor="#878787"
                        android:textSize="11sp" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/option2"
                    android:layout_width="match_parent"
                    android:layout_height="0dip"
                    android:layout_weight="1"
                    android:background="@drawable/tabbar_bg_down3"
                    android:clickable="true" >

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:clickable="false"
                        android:src="@drawable/tabbar_style" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_centerHorizontal="true"
                        android:clickable="false"
                        android:paddingBottom="3dp"
                        android:text="@string/tabbar_style"
                        android:textColor="#878787"
                        android:textSize="11sp" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/option3"
                    android:layout_width="match_parent"
                    android:layout_height="0dip"
                    android:layout_weight="1"
                    android:background="@drawable/tabbar_bg_down3"
                    android:clickable="true" >

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:clickable="false"
                        android:src="@drawable/tabbar_search" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_centerHorizontal="true"
                        android:clickable="false"
                        android:paddingBottom="3dp"
                        android:text="@string/tabbar_search"
                        android:textColor="#878787"
                        android:textSize="11sp" />
                </RelativeLayout>
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>